# books-tensorflow-for-deep-learning

./: LICENSE  README.md  pyproject.toml
exercises/: chapter-0-hello-world.py
