[tool.poetry]
name = "books-tensorflow-for-deep-learning"
version = "0.1.0"
description = ""
authors = ["Martynas Asipauskas <me@martynas.co.uk>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7.6"
keras = "^2.3.1"
seaborn = "^0.9.0"
tensorflow = "^2.1.0"
jupyter = "^1.0.0"
notebook = "^6.0.2"

[tool.poetry.dev-dependencies]
pylint = "^2.4.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
